load(
    "@com_github_mvukov_rules_ros2//ros2:interfaces.bzl",
    "cpp_ros2_interface_library",
    "ros2_interface_library",
)

ros2_interface_library(
    name = "pcl_msgs",
    srcs = glob(["msg/*.msg"]),
    visibility = ["//visibility:public"],
    deps = [
        "@ros2_common_interfaces//:sensor_msgs",
        "@ros2_rcl_interfaces//:builtin_interfaces"
    ],
)

cpp_ros2_interface_library(
    name = "cpp_pcl_msgs",
    visibility = ["//visibility:public"],
    deps = [":pcl_msgs"],
)
